--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,7 @@ cython_debug/
 !.vscode/extensions.json
 !.vscode/settings.json
 !.vscode/tasks.json
+!.vscode/launch.json
 
 # VS Code extensions/forks:
 .cursorignore
