--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,31 +1,21 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  {
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "OpenHands",
-      "type": "python",
+      "name": "OpenHands (Shell)",
+      "type": "debugpy",
       "request": "launch",
+      "module": "uvicorn",
       "cwd": "${workspaceFolder}",
-      "program": "/usr/local/py-utils/bin/poetry",
-      "python": "/usr/local/bin/python",
+      "python": "${workspaceFolder}/.venv/bin/python",
       "args": [
-        "run",
-        "python",
-        "-m",
-        "uvicorn",
         "openhands.server.listen:app",
-        "--host",
-        "0.0.0.0",
-        "--port",
-        "3000",
-        "--reload"
+                "--reload",
+                "--port", "3000",
+                "--host", "127.0.0.1",
+                "--reload-exclude", "./workspace"
       ],
       "justMyCode": false,
-      "stopOnEntry": false,
       "console": "integratedTerminal",
       "env": {
         "WORKSPACE_BASE": "${workspaceFolder}/workspace",
